# colocfinder

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
data/: config.example.yaml
docs/: cookies.md
src/: bot.rs  config.rs  database.rs  http_client.rs  main.rs  models.rs  scraper_trait.rs  tracker.rs
src/scrapers/: leboncoin.rs  mod.rs
