[package]
name = "colocfinder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "colocfinder"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
